# open-notes-api

./: .gitignore  Dockerfile  README.md  config.toml  docker-compose.yml  go.mod  go.sum  main.go  pyproject.toml
config/: config.go
controllers/: note.go
database/: database.go  models.go
src/open_notes_api/: controller.py  db.py  main.py  models.py  schema.py
