[tool.poetry]
name = "open-notes-api"
version = "0.1.0"
description = ""
authors = ["Juan Monteiro <juan.monteiro@jmonteiro.net>"]
readme = "README.md"
packages = [{include = "open_notes_api", from = "src"}]

[tool.poetry.scripts]
server = "open_notes_api.main:run_dev"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
SQLAlchemy = {version = "2.0.0b1", extras = ["asyncio"]}
asyncpg = "^0.26.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.4"
black = "^22.10.0"

[tool.pylint]
good-names = ["db"]

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
